<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOGIN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password</string>
    <string name="log_in">login</string>
    <string name="fade">Fade In</string>
    <string name="animation">Animation</string>
    <string name="chat">Chat</string>
    <string name="login">Login</string>

</resources>
