<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/gpc_background">

    <LinearLayout
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/btn_background"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingTop="@dimen/padding_16"
        android:paddingEnd="22dp"
        android:paddingBottom="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_button"
            android:textColor="#1B1E1F"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/btn_background"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingTop="@dimen/padding_16"
        android:paddingEnd="22dp"
        android:paddingBottom="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/animationButton"
        app:layout_constraintTop_toBottomOf="@+id/chatButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="#1B1E1F"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/animationButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/btn_background"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingTop="@dimen/padding_16"
        android:paddingEnd="22dp"
        android:paddingBottom="@dimen/padding_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_animation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_button"
            android:textColor="#1B1E1F"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>