<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/transparentBackground"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_32"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:boxBackgroundMode="none"
            app:boxStrokeErrorColor="@color/errorRed"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/errorRed"
            app:hintEnabled="false"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEmailET"
                android:layout_width="match_parent"
                android:theme="@style/EditTextTheme"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_8"
                android:textColor="@color/inputFieldColor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_32"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            app:boxBackgroundMode="none"
            app:boxStrokeErrorColor="@color/errorRed"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/errorRed"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/loginEmailTI">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginPasswordET"
                android:theme="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/inputFieldColor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="@dimen/padding_32"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/login_btn_background"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordTI" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.388" />


</androidx.constraintlayout.widget.ConstraintLayout>

